# grounded_ai

./: .gitignore  README.md  TODOs.md  hallucination_evaluator.py  pyproject.toml  requirements-test.txt
.github/workflows/: ci.yml  release.yml  test_publish.yml
docs/: custom_evaluator_examples.md
examples/: anthropic.ipynb  anthropic_hallucination.py  batch_processing.py  evaluators.ipynb  grounded_ai.ipynb  openai.ipynb  openai_hallucination.py  rag_eval_slm.py  toxicity_check_slm.py
examples/backends/: anthropic.ipynb  bedrock.ipynb  bedrock_hallucination_check.py  grounded_ai.ipynb  huggingface_prompt_guard.ipynb  huggingface_qwen.ipynb  openai.ipynb
examples/otel/: evaluate_langgraph_trace.ipynb  evaluate_multi_turn_agent.py  evaluate_otlp_genai_trace.py  evaluate_otlp_trace.ipynb  evaluate_rag_hallucination.py  evaluate_trace_tool_usage.py  trace_span_eval.ipynb
grounded_ai/: __init__.py  base.py  schemas.py
grounded_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
grounded_ai/backends/: anthropic.py  bedrock.py  huggingface.py  openai.py
grounded_ai/backends/grounded_ai_slm/: backend.py  utils.py
grounded_ai/backends/grounded_ai_slm/validators/: output_data.py  rag_data.py
grounded_ai/evaluators/: __init__.py  base.py  custom_evaluator.py  groundedai_evaluator.py  hallucination_evaluator.py  init.py  prompt_hub.py  rag_relevance_evaluator.py  toxicity_evaluator.py  utils.py
grounded_ai/examples/: evaluators.ipynb  langchain_rag_eval.ipynb
grounded_ai/otel/: __init__.py  converter.py  schemas.py
grounded_ai/schema/: base_data.py  hallucination_data.py  init.py
grounded_ai/validators/: __init__.py  hallucination_data.py  init.py  output_data.py  toxic_data.py
src/grounded-ai/evaluators/: hallucination_evaluator.py  init.py  rag_relevance_evaluator.py  toxicity_evaluator.py
tests/: test_anthropic_backend.py  test_bedrock_backend.py  test_custom_evaluator.py  test_huggingface_backend.py  test_openai_backend.py  test_otel.py  test_prompt_formatting.py  test_schema_parsing.py  test_slm_backend.py  test_validators.py
tests/evaluators/: groundedai_vs_gpt4_hallucination_detection_final.ipynb
