[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grounded-ai"
version = "1.0.5"
description = "A Python package for evaluating LLM application outputs."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Josh Longenecker", email = "info@groundedai.tech" },
]
keywords = [
  "NLP",
  "QA",
  "Toxicity",
  "Rag",
  "evaluation",
  "language-model",
  "transformer",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "peft",
  "transformers",
  "torch==2.8.0",
  "accelerate",
  "flash-attn",
  "bitsandbytes==0.47.0",
  "jinja2==3.1.6",
]

[project.urls]
"Homepage" = "https://github.com/grounded-ai/grounded_ai"
"Bug Tracker" = "https://github.com/grounded-ai/grounded_ai/issues"